# simple-weather

./: Cargo.toml  README.md  meson.build  org.gnlug.SimpleWeather.json
data/: meson.build  org.gnlug.SimpleWeather.appdata.xml.in  org.gnlug.SimpleWeather.desktop.in  org.gnlug.SimpleWeather.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  main.rs  meson.build  simple-weather.gresource.xml  window.rs  window.ui
