[package]
name = "simple-weather"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.5", package = "gtk4" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
ipgeolocate = "0.3.5"
public-ip = "0.2.2"